--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
           action: "upload"
           app_location: "/"
           api_location: ""
-          output_location: "/"
+          output_location: ""
